--- a/final/theory.tex
+++ b/final/theory.tex
@@ -1200,7 +1200,7 @@ These concepts are demonstrated by the graph in \figurename~\ref{fig:degree}.
     \begin{tikzpicture}[every node/.style={labeled node}]
       \cycleV{\(v_2\),\(v_3\),\(v_4\),\(v_5\),\(v_6\),\(v_7\)}{(0,0)}{1in}{0}{c};
       \node (v1) at (0,0) {\(v_1\)};
-      \node (v8) at (150:1.25in) {\(v8\)};
+      \node (v8) at (150:1.25in) {\(v_8\)};
       \foreach \i in {c1,c2,c3,c4,c5,c6}{
         \draw (v1) edge (\i);
       }
