--- a/final/random.tex
+++ b/final/random.tex
@@ -120,9 +120,9 @@ possibility.  A polynomial curve fit to the data indicates a runtime complexity 
 
 When \figurename~\ref{fig:qzruntime} is compared to the Christofides/Wang results in
 \figurename~\ref{fig:cfruntime}, it can be seen that Christofides/Wang runtime complexity is a bit better:
-\(\BO(1.0045^{n^2})\) versus \(\BO(1.0103^{n^2})\).  This means that even though the proposed algorithm performs
-better in the target range, it will eventually lose to Christofides/Wang.  Based on the equations for the two curve
-fits, the break-even point appears to be at about \(n=37\).
+\(\BO(1.0045^{n^2})\) versus \(\BO(1.0103^{n^2})\).  This means that even though the proposed algorithm processes
+fewer states in the target range, it will eventually lose to Christofides/Wang.  Based on the equations for the
+two curve fits, the break-even point appears to be at about \(n=37\).
 
 \subsection{Bounding Test Results}\label{sec:sub:bounding}
 
