--- a/defense/defense.tex
+++ b/defense/defense.tex
@@ -808,7 +808,7 @@
 \begin{frame}
   \frametitle{Estimating a Lower Bound}
   \begin{itemize}
-  \item \(\w(G)\le\a(G)\).
+  \item \(\w(G)\le\X(G)\).
   \item The clique number problem is also inherently intractable.
   \item Use the Edwards Elphick (1982) algorithm to find a lower bound: \(\w'(G)\le\w(G)\le\X(G)\).
   \item Label the vertices from \(1\) to \(n\).
@@ -1227,8 +1227,7 @@
   \begin{itemize}
   \item Any of the three algorithms are sufficient for the design tool in the target range.
   \item Bounding conditions influence runtime complexity at small to moderate \(n\).
-  \item Most bounding conditions effectively die out with at larger \(n\).
-  \item Intractable problems must be broken up into problem domains.
+  \item Most bounding conditions effectively die out at larger \(n\).
   \item There is no one solution that works in all cases.
   \end{itemize}
 \end{frame}
